@@ -2,3 +2,4 @@ py-gcode-metadata
 requests>=2.31.0
 inotify_simple~=1.3.5
 mypy-extensions~=1.0.0
+urllib3>=1.21.1,<3
